<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_ddi"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/field_radius"
        android:gravity="center"
        android:hint="@string/hint_ddi"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="2"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_ddd"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_text_ddi"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/edit_text_ddi"
        android:layout_toRightOf="@+id/edit_text_ddi"
        android:background="@drawable/field_radius"
        android:gravity="center"
        android:hint="@string/hint_ddd"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="2"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/edit_text_ddi"
        android:layout_toEndOf="@+id/edit_text_ddd"
        android:layout_toRightOf="@+id/edit_text_ddd"
        android:background="@drawable/field_radius"
        android:hint="@string/hint_number"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_view_counter"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_text_ddi"
        android:layout_marginTop="8dp"
        android:background="@drawable/field_radius"
        android:gravity="start"
        android:hint="@string/hint_message"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:maxLength="160"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp"
        android:scrollbars="vertical"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text_view_counter"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_above="@+id/image_button_clean"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/counter_radius"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/label_counter"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/image_button_clean"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_radius_red"
        android:contentDescription="@string/desc_clean"
        android:onClick="clearMessage"
        android:src="@drawable/ic_delete_white_24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/image_button_clean"
        android:layout_toRightOf="@+id/image_button_clean"
        android:background="@drawable/button_radius_orange"
        android:gravity="center"
        android:onClick="sendSMS"
        android:text="@string/label_send"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</RelativeLayout>